--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -10,13 +10,35 @@
 .side-header{
   height: 100px;
   padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.user a{
+  font-size: 16px;
+  color: #fafafa;
+  text-decoration: none;
+}
+.chat-edit a{
+  font-size: 10px;
+  text-decoration: none;
+  color: deepskyblue;
+  border: 1px solid lightblue;
+  padding: 14px;
 }
 .rooms{
   background-color: #2f3e51;
   height: calc(100vh - 100px);
   padding: 0 20px;
+  overflow: scroll;
 }
-
+.room {
+  padding: 20px 0 40px;
+}
+.room-name a{
+  text-decoration: none;
+  color: white;
+}
 .main-chat{
   width: calc(100vw - 300px);
   height: 100vh;
