--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -47,14 +47,84 @@
 .chat-header{
   height: 100px;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+}
+.group{
+  font-size: 24px;
+  color: #333;
+  margin-top: 36px;
+}
+.chat-end a{
+  color: darkred;
+  text-decoration: none;
+  border: 1px solid darkred;
+  padding: 20px;
+}
+.chat-end{
+  margin-top: 40px;
 }
 .messages{
   height: calc(100vh - 100px - 90px);
   background-color: #fafafa;
   padding: 46px 40px 0;
 }
+.user-data{
+  display: flex;
+  padding-top: 10px;
+}
+.user-data2{
+  display: flex;
+  padding-top: 10px;
+}
+.user-name{
+  font-size: 16px;
+  color: #434a54;
+  margin-right: 10px;
+}
+.date{
+  font-size: 12px;
+  color: #999;
+}
+.comment{
+  padding-top: 10px;
+  margin-bottom: 40px;
+}
 .form{
   height: 90px;
   background-color: #dddddd;
   padding: 20px 40px;
+  display: flex;
+}
+.contact-form{
+  display: flex;
+  width: 100%;
+  background-color: white;
+}
+.foot-form{
+  height: 50px;
+  width: 100%;
+  padding-left: 10px;
+  border: none;
+}
+.send{
+  height: 50px;
+  padding: 0 20px;
+  border: none;
+  color: white;
+  background-color: #38aef0;
+  font-size: 16px;
+  margin-left: 15px;
+}
+.form-image{
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+.hidden{
+  display: none;
 }
