--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,8 +1,31 @@
 <div class="chat-header">
+  <div class="left-header">
+    <div class="group">hogefuga</div>
+  </div>
+  <div class="right-header">
+    <div class="chat-end"><a href="#">チャットを終了する</a></div>
+  </div>
 </div>
 
 <div class="messages">
+  <div class="user-data">
+    <div class="user-name">Tom</div>
+    <div class="date">2020/3/31(Wed) 12:43:30</div>
+  </div>
+  <div class="comment">おはよう</div>
+  <div class="user-data2">
+    <div class="user-name">Sim</div>
+    <div class="date">2020/3/31(wed) 12:43:30</div>
+  </div>
 </div>
 
 <div class="form">
+  <div class="contact-form">
+    <input type="text" placeholder="type a message" class="foot-form">
+      <label class="form-image">
+        <span class="image-file">画像</span>
+        <input type="file" class="hidden">
+      </label>
+  </div>
+  <input type="submit" value="送信" class="send">
 </div>
