--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -19,13 +19,13 @@
   </div>
 </div>
 
-<div class="form">
-  <div class="contact-form">
-    <input type="text" placeholder="type a message" class="foot-form">
-      <label class="form-image">
-        <span class="image-file">画像</span>
-        <input type="file" class="hidden">
-      </label>
+<%= form_with model: [@room, @message], html: {class: "form"}, local: true do |f|%>
+  <div class="form-input">
+    <%= f.text_field :content, class: 'form-message', placeholder: 'type a message' %>
+    <label class="form-image">
+      <span class="image-file">画像</span>
+      <%= f.file_field :image, class: 'hidden' %>
+    </label>
   </div>
-  <input type="submit" value="送信" class="send">
-</div>
+  <%= f.submit '送信', class: 'form-submit' %>
+<% end %>
