--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,6 +1,8 @@
 <div class="chat-header">
   <div class="left-header">
-    <div class="group">hogefuga</div>
+    <div class="group">
+      <%= @room.name %>
+    </div>
   </div>
   <div class="right-header">
     <div class="chat-end"><a href="#">チャットを終了する</a></div>
