--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="right-header">
-    <div class="chat-end"><a href="#">チャットを終了する</a></div>
+    <div class="chat-end"><%= link_to "チャットを終了する", room_path(@room), data: { turbo_method: :delete } %></div>
   </div>
 </div>
 
